{{$NEXT}}

4.112530  2011-09-10 12:42:15 Europe/London

  * Port to Dist::Zilla

yatg (3.02) UNRELEASED; urgency=low

  * alter ignored interfaces list when storing data not to exclude port-channels

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Wed, 02 Jun 2010 11:51:01 +0100

yatg (3.01) UNRELEASED; urgency=low

  * yatg_updater now retrieves (new) list of devices on each poll run
  * can now have multiple store backends per OID
  * new store backend NSCA for submitting passive Nagios service check results

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sun, 16 Aug 2009 11:24:09 +0100

yatg (2.0.1-1) UNRELEASED; urgency=low

  * Move to Module::Install
  * Sanitize the CGI

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sat,  8 Nov 2008 18:34:00 +0000

yatg (2.0.0-1) unstable; urgency=low

  * Use gmtime rather than localtime.

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Wed,  9 Jan 2008 09:35:58 +0000

yatg (1.3.3-1) stable; urgency=low

  * Added Tutorial POD from Nelson Ferraz

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Fri, 30 Nov 2007 15:34:00 +0000

yatg (1.3.2-1) stable; urgency=low

  * Missed file from MANIFEST

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Thu, 11 Oct 2007 14:22:00 +0100

yatg (1.3.1-1) stable; urgency=low

  * Documentation fixes
  * Include nagios check example script

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Tue,  9 Oct 2007 10:54:00 +0100

yatg (1.3-1) stable; urgency=low

  * Update for SNMP::Effective 0.4 (which is newer than 1.0)
  * Documentation
  * Perl packaging

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sun,  7 Oct 2007 22:15:00 +0100

yatg (1.2-2) stable; urgency=low

  * Add a cheat for adding multiple data sources (load balanced ports)
  * Check version of Module::Multiconf so that no_validation is supported

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Wed,  3 Oct 2007 23:33:00 +0100

yatg (1.2-1) unstable; urgency=low
