@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  * Make NSCA config optional (D. Walrond)
+
 4.112530  2011-09-10 12:42:15 Europe/London
 
   * Port to Dist::Zilla
